# SAEBench-Reliability

./: .gitignore  README.md  pyproject.toml
configs/: registry.yaml
configs/gpu/: README.md  autointerp_gpu.yaml  core_gpu.yaml  jobs.yaml
configs/reproduce/: absorption.yaml  core.yaml
docs/: GPU_SETUP.md  metric_notes.md  preregistration.md  pythia160m_loading_notes.md  scr_tpp_run_log.md  sparse_probing_run_log.md
docs/logs/: 2026-06-22_01_setup-and-environment.md  2026-06-22_02_validation-and-results.md  2026-06-22_03_next-steps.md  2026-06-22_04_exact-apples-to-apples-bundle.md  2026-06-22_05_repo-reorganization.md  2026-06-22_06_migrated-into-saebench-reliability.md  2026-06-22_07_full-suite-reproduction-4k.md  2026-06-22_08_methodology-audit-and-oracle.md  2026-06-22_09_gpu-config-setup.md  2026-06-22_10_full-core-metrics-neuronpedia-baselines.md  2026-06-22_11_autointerp.md  2026-06-23_12_methodology-audit-followup.md
scripts/: aggregate_results.py  colab_scr_tpp_smoke.md  make_figures.py  run_absorption.py  run_autointerp.py  run_autointerp_gpu.py  run_core_full_suite.py  run_core_gpu.py  run_metric.py  run_pythia160m_mary_metrics_smoke.py  run_pythia160m_tpp_smoke.py  run_scr_tpp_smoke.py  run_suite.py
src/saebench_audit/: __init__.py  io.py  plotting.py  sae_models.py  (+2 more)
tests/: README.md  fixtures_autointerp_prompts.json  saebench_autointerp_verbatim.py  saebench_verbatim.py  test_absorption_units.py  test_autointerp_oracle.py  test_autointerp_prompts.py  test_autointerp_units.py  test_core_full_oracle.py  test_core_oracle.py  test_core_units.py
(+11 files in other folders)
